--- a/utility.css
+++ b/utility.css
@@ -10,6 +10,7 @@
 }
 .border{
     /* border:2px solid black; */
+    border:2px solid red;
 }
 .test_margin{
     margin:4px
@@ -27,4 +28,8 @@
 }
 .p-1{
     padding:15px;
+}
+.text-align{
+    text-align:end;
+    /* text-align: center; */
 }
