--- a/font.css
+++ b/font.css
@@ -5,3 +5,12 @@
     font-family: "Roboto", sans-serif;
     font-weight: 700;
 }
+
+.legal-1{
+    /* color:blue;
+     */
+
+    font-family: "Roboto", sans-serif;
+    font-weight:400;
+
+}
