--- a/style.css
+++ b/style.css
@@ -109,3 +109,39 @@
     border-radius:30px;;
     border-style: none;
 }
+.playlist-1{
+    padding:30px 0px 0px 19px;
+}
+
+.card{
+    height:30vh;
+    width:10vw;
+    /* padding-left: 24px;
+    padding-top: 24px; */
+    border-radius: 8px;
+    /* flex-wrap: wrap; */
+    margin-left:24px;
+    margin-top:20px;
+    /* background-color: red; */
+    background-color: rgb(34, 32, 32);
+    text-align: center;
+
+}
+
+.card img{
+    margin:7px;
+    border-radius: 8px;
+    height: 20vh;
+    width: 9vw;
+    /* padding:10px; */
+}
+.card h3{
+    font-weight: 700;
+    font-size: 17px;
+    position: relative;
+    bottom:2px;
+}
+.card p{
+    font-weight: 400;
+    font-size:10px;
+}
