--- a/font.css
+++ b/font.css
@@ -1,16 +1,38 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+* {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
 }
 
-.legal-1{
+.legal-1 {
     /* color:blue;
      */
 
     font-family: "Roboto", sans-serif;
-    font-weight:400;
+    font-weight: 400;
 
+}
+
+/* scroll bar */
+
+
+/* For webkit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #3a3434;
+    border-radius: 6px;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.9), 0 0 30px rgba(255, 255, 255, 0.6), 0 0 45px rgba(255, 255, 255, 0.3);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3a3434;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 1), 0 0 40px rgba(255, 255, 255, 0.7), 0 0 60px rgba(255, 255, 255, 0.4);
 }
