--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  overflow-x:hidden;
+  /* overflow-x:hidden; */
 }
 .container {
   background-color: #000000;
@@ -174,6 +174,19 @@
  
 } 
 .song_name{
-  padding:40px;
+  display: flex;
+  padding:10px;  
+  margin-top:10px;
+  flex-wrap: wrap;
+  
+}
+.song_name ol {
+  list-style-type: decimal;
+}
+
+.song_name ol li {
+  padding: 20px;
+  list-style-type: decimal;
+  color: white;
 }
 
