--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   /* overflow-x:hidden; */
 }
+
 .container {
   background-color: #000000;
   display: flex;
@@ -12,14 +13,17 @@
     text-align: center; */
   /* flex-wrap: wrap; */
 }
+
 .upper .p-1 {
   /* margin: 10px;; */
 
   list-style: none;
 }
+
 .lower {
   /* height: 100vh; */
 }
+
 .left {
   width: 25vw;
   height: 100vh;
@@ -28,24 +32,28 @@
 .list {
   gap: 40px;
 }
+
 .upper li {
   display: flex;
   gap: 14px;
   /* padding:20px; */
 }
+
 .upper {
   margin: 10px;
   padding-left: 10px;
 }
+
 .logo {
   padding: 10px;
 }
+
 .lower {
   margin: 10px;
   padding-left: 13px;
   height: 76vh;
   position: relative;
-  
+
 }
 
 .lib {
@@ -54,11 +62,13 @@
   padding-left: 13px;
   gap: 16px;
   opacity: 0.6;
-  
+
 }
+
 .lib img {
   width: 23px;
 }
+
 .legal {
   /* width: 100px; */
   width: 254px;
@@ -97,6 +107,7 @@
   padding: 30px;
   background-color: rgb(34, 34, 34);
 }
+
 .header button {
   padding: 18px 29px 18px 29px;
   border-radius: 30px;
@@ -107,6 +118,7 @@
   display: flex;
   flex-wrap: wrap;
 }
+
 .playlist {
   max-height: 70vh;
   overflow-y: scroll;
@@ -142,12 +154,14 @@
   width: 9vw;
   /* padding:10px; */
 }
+
 .card h3 {
   font-weight: 700;
   font-size: 17px;
   position: relative;
   bottom: 2px;
 }
+
 .card p {
   font-weight: 400;
   font-size: 10px;
@@ -162,27 +176,31 @@
   bottom: 0;
   width: 100%;
   justify-content: center;
-  
+
   align-items: center;
 }
+
 .control {
   /* background-color: grey; */
-} 
-.play_pause{
-    display: flex;
-    gap:30px;
-}  
+}
+
+.play_pause {
+  display: flex;
+  gap: 30px;
+}
+
 .play_pause img {
   height: 30px;
- 
-} 
-.song_name{
+
+}
+
+.song_name {
   position: relative;
-  top:20px;
+  top: 20px;
   /* display: flex; */
-  padding:10px;  
+  padding: 10px;
   margin: 20px;
-  margin-top:10px;
+  margin-top: 10px;
   /* flex-wrap: wrap; */
   /* border:2px solid red; */
   height: 24em;
@@ -191,44 +209,76 @@
 /* old song */
 .song_name ol {
   list-style-type: decimal;
- 
+
 }
 
 .song_name ol li {
   padding: 20px;
   list-style-type: decimal;
- 
+
 }
 
 
-.song-list{
+.song-list {
+
   height: 26em;
-  overflow-y:scroll;  
-  margin:25px;
-  display: flex ;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin: 25px;
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  /* ::-webkit-scrollbar-thumb {
-    background: #3a3434;
-    border-radius: 1px;
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.9), 0 0 30px rgba(255, 255, 255, 0.6), 0 0 1px rgba(255, 255, 255, 0.3);
-} */
+
+
+
+
 
 
 
 }
-.songcard{
+
+.songcard {
   /* display: flex; */
-  display:flex;
+  display: flex;
+  text-align: center;
   height: 100px;
-  width:200px;
-  border:2px solid red;
-  margin:10px;
+  width: 200px;
+
+  margin: 10px;
   align-items: center;
-  gap:20px;
+  gap: 20px;
   justify-content: space-around;
-  
+  position: relative;
 }
-.songcard img{
+
+.songcard .songcard_img1 {
   width: 28px;
+  position: absolute;
+  left: 0;
+}
+.songcard .songcard_img2 {
+  width: 28px;
+  position: absolute;
+  right: 0;
+}
+
+
+/* neon scroll bar for songs list */
+#song-list::-webkit-scrollbar {
+  width: 2.4px;
+}
+
+#song-list::-webkit-scrollbar-track {
+  background: #000;
+}
+
+#song-list::-webkit-scrollbar-thumb {
+  background: #32cd32;
+  border-radius: 4px;
+  box-shadow: 0 0 50px rgba(50, 205, 50, 1), 0 0 100px rgba(50, 205, 50, 0.75), 0 0 150px rgba(50, 205, 50, 0.5);
+}
+
+#song-list::-webkit-scrollbar-thumb:hover {
+  background: #32cd32;
+  box-shadow: 0 0 70px rgba(50, 205, 50, 1), 0 0 140px rgba(50, 205, 50, 0.75), 0 0 210px rgba(50, 205, 50, 0.5);
 }
