--- a/style.css
+++ b/style.css
@@ -67,12 +67,14 @@
 
 .lib img {
   width: 23px;
+  
 }
 
 .legal {
   /* width: 100px; */
+  /* border:2px solid red;   */
   width: 254px;
-
+  /* max-height:200px; */
   text-align: center;
   display: flex;
   opacity: 0.5;
@@ -80,12 +82,14 @@
   gap: 10px;
   position: absolute;
   padding-bottom: 30px;
+  z-index: 100;
   /* padding:0 24px; */
   bottom: 0;
   /* margin:auto
 
      */
   padding-left: 10px;
+  /* background-color: black; */
   flex-wrap: wrap;
 }
 
@@ -94,7 +98,7 @@
 .right {
   background-color: #121212;
   height: 96.8vh;
-  width: 75vw;
+  width: 75vw; 
   position: relative;
   top: 10px;
 }
@@ -171,10 +175,10 @@
   /* border:2px solid red; */
   height: 5.7em;
   display: flex;
-  position: absolute;
-  background-color: rgb(56, 34, 34);
+  position: fixed;
+  background-color: rgb(0, 0, 0);
   bottom: 0;
-  width: 100%;
+  width: 75%;
   justify-content: center;
 
   align-items: center;
@@ -220,8 +224,8 @@
 
 
 .song-list {
-
-  height: 26em;
+ 
+  max-height: 26em;
   overflow-y: scroll;
   overflow-x: hidden;
   margin: 25px;
@@ -236,14 +240,16 @@
 
 
 }
-
 .songcard {
   /* display: flex; */
   display: flex;
   text-align: center;
   height: 100px;
   width: 200px;
-
+  padding:10px;
+  border-radius: 10px;
+  background-color:rgba(74, 63, 52, 0.09);
+  /* border:1px solid white; */
   margin: 10px;
   align-items: center;
   gap: 20px;
@@ -261,7 +267,9 @@
   position: absolute;
   right: 0;
 }
-
+.songcard:hover{
+  cursor:pointer;
+}
 
 /* neon scroll bar for songs list */
 #song-list::-webkit-scrollbar {
@@ -281,4 +289,29 @@
 #song-list::-webkit-scrollbar-thumb:hover {
   background: #32cd32;
   box-shadow: 0 0 70px rgba(50, 205, 50, 1), 0 0 140px rgba(50, 205, 50, 0.75), 0 0 210px rgba(50, 205, 50, 0.5);
+}
+
+
+
+/* sickbar */
+
+.sickbar{
+  position: absolute;
+  bottom:10px;
+  width: 80%;
+  height: 4px;
+  border:0.4px solid white;
+  border-radius: 10px;
+  transition:all 2s ease-out;
+}
+.sickbar .circle{
+  position: absolute;
+  left:0;
+  height: 10px;
+  border-radius: 50%;
+  width: 10px;
+  background-color: whitesmoke;
+  bottom:-3px;
+
+  transition:all 2s ease-out  ;
 }
