--- a/style.css
+++ b/style.css
@@ -181,16 +181,21 @@
   width: 75%;
   justify-content: center;
 
+
   align-items: center;
 }
 
 .control {
   /* background-color: grey; */
 }
+.play_pause img{
+  cursor: pointer;
+}
 
 .play_pause {
   display: flex;
   gap: 30px;
+  /* position: absolute; */
 }
 
 .play_pause img {
@@ -229,7 +234,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   margin: 25px;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   flex-wrap: wrap;
 
@@ -297,21 +302,59 @@
 
 .sickbar{
   position: absolute;
+  cursor:pointer;
   bottom:10px;
   width: 80%;
   height: 4px;
   border:0.4px solid white;
+  background-color: rgb(118, 116, 116);
   border-radius: 10px;
-  transition:all 2s ease-out;
+  /* transition:all 2s ease-out; */
 }
 .sickbar .circle{
   position: absolute;
-  left:0;
+  left:0%;
   height: 10px;
   border-radius: 50%;
   width: 10px;
-  background-color: whitesmoke;
+  background-color: rgb(179, 169, 169);
   bottom:-3px;
 
-  transition:all 2s ease-out  ;
+  transition:all 1s ease-out  ;
+}
+
+.song-info{
+  color: white;
+ 
+  /* height: 50px;
+  width: 200px; */
+  /* position: absolute;
+  left: 150px; 
+  top:20px;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;  
+  font-weight: 300; */
+ 
+  flex-wrap: warp;
+}
+
+.holder{
+  display: flex;
+  justify-content: space-around;
+ 
+  width: 50vw;
+  align-items: center ;
+
+}
+
+
+
+.songtime{
+  display: flex;
+  /* border:2px solid red; */
+  /* width: 100px; */
+  gap:10px;
 }
