--- a/reponsive.css
+++ b/reponsive.css
@@ -4,9 +4,10 @@
         height: 100%;
         position: absolute;
         /* background-color: black; */
-        left:-500px;    
-        z-index: 10;
+        left:-200vw;    
+        z-index: 10;    
         overflow-y: hidden;
+        transition: all 1.2s ease-out;
     }
     .right{
         width: 100vw;
@@ -18,6 +19,7 @@
     .hamburger{
         display:inline;
         cursor:pointer;
+        
     }
     .song-list{
        
@@ -32,5 +34,45 @@
         
         height: 18vh;
         width: 79vw;
+    }
+    .close{
+        display: inline;
+        width: 30px;
+        right: 24px;
+        top:16px;
+
+        position: absolute;
+    }
+    .player{
+        z-index: 20;
+        height:19vh;
+        
+    }
+    .holder{
+        /* border:2px solid blue; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        height: 18vh;
+        width: 80vw;
+    }
+    .speaker{
+        position:absolute;
+        bottom:10px;
+        right:34vw;
+        height: 3vh;
+        width: 42vw;
+        /* border: 1px solid red; */
+
+    }
+    .song-info{
+        position:absolute;
+        top:6px;
+    }
+    .songtime{
+        bottom:2vh;
+        right:3vw;
     }
 }   
