--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
 
 .playlist {
   max-height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   /* border:2px solid red; */
 }
@@ -200,6 +200,12 @@
 
 .play_pause {
   display: flex;
+  position: absolute; 
+  justify-self: center;
+  
+  left:18vw;
+  
+
   gap: 30px;
   /* position: absolute; */
 }
@@ -352,17 +358,19 @@
   justify-content: center;
   border-radius: 10px;  
   font-weight: 300; */
- 
+  
   flex-wrap: warp;
 }
 
 .holder{
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  /* position:absolute; */
   flex-wrap: wrap;
   width: 50vw;
   align-items: center ;
-
+  height: 6vh;
+  position: relative;
 }
 
 
@@ -371,9 +379,35 @@
   display: flex;
   /* border:2px solid red; */
   /* width: 100px; */
+  position: absolute;
+  right:13vw;
   gap:10px;
 }
 .arrow .menu_image{
   display: none;
   
+}
+
+
+/* forclose button */
+.close{
+  display: none;
+  width: 30px;
+  right: 24px;
+  top:16px;
+
+  position: absolute;
+}
+#range{
+  height: 3px;
+  
+}
+.speaker{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  gap:10px;
+  position: absolute;
+  right: 0;
+
 }
